2008-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Revert last patch,
	we were already checking for GST_TAG_PREVIEW_IMAGE

2008-10-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Patch from John Millikin
	<jmillikin@gmail.com> to also look for the GST_TAG_PREVIEW_IMAGE
	tag when trying to get audio file covers (Closes: #556074)

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (relative_uri_remove_query),
	(resolve_uri):
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Backport fixes from #555417

============ Version 2.24.2

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.2

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/youtube/youtube.py: Patch from Edward Hervey
	<bilboed@gmail.com> to fix the threading in the youtube plugin
	(Closes: #548879)

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-python-module.c
	(totem_python_module_init_python), (totem_python_module_load):
	* src/plugins/totem-python-plugin.c (call_python_method),
	(check_py_object_is_gtk_widget), (totem_python_object_init),
	(totem_python_object_get_type): Patch from Tim-Philipp Müller
	<tim.muller@collabora.co.uk>, Prepare python for use from multiple
	threads and add missing locking where applicable (Closes: #554868)

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Gilles Dartiguelongue
	<gilles.dartiguelongue@esiee.org> to update the intltool
	requirements (Closes: #555283)

============ Version 2.24.1

2008-10-01  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.1
	* Makefile.am: fix dist for new intltool

2008-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-missing-plugins.c