@@ -1,3 +1,9 @@
+2008-10-21  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
+	Fix playing property being wrong when an error occurs
+	(Closes: #556039)
+
 2008-10-14  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c
